hw2 finish