@@ -1,15 +1,17 @@
 package ru.javawebinar.topjava.repository.inmemory;
 
+import org.springframework.stereotype.Repository;
 import ru.javawebinar.topjava.model.Meal;
 import ru.javawebinar.topjava.repository.MealRepository;
 import ru.javawebinar.topjava.util.MealsUtil;
 
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
-
+@Repository
 public class InMemoryMealRepository implements MealRepository {
     private final Map<Integer, Meal> repository = new ConcurrentHashMap<>();
     private final AtomicInteger counter = new AtomicInteger(0);
@@ -44,7 +46,8 @@ public class InMemoryMealRepository implements MealRepository {
     {
         return repository.values().stream()
                 .filter(meal -> meal.getUserId().equals(userId))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(Meal::getDate))
+                .toList();
     }
 }
 
